force-app/main/default/objects/CSheet__c/CSheet__c.object-meta.xml
<CustomObject>
    <label>CSheet</label>
    <nameField>
        <label>Character Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>