force-app/main/default/objects/CSheet__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <label>Alignment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>