force-app/main/default/objects/CSheet__c/fields/Armor__c.field-meta.xml
<CustomField>
    <fullName>Armor__c</fullName>
    <formula>Equipment2__r.Defense__c +( Constitution__r.Stat__c * 0.5) +  (Dexterity__r.Stat__c * 0.5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Armor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>