force-app/main/default/objects/CSheet__c/fields/Attack__c.field-meta.xml
<CustomField>
    <fullName>Attack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attack</label>
    <referenceTo>Attack__c</referenceTo>
    <relationshipLabel>CSheets</relationshipLabel>
    <relationshipName>CSheets</relationshipName>
    <type>Lookup</type>
</CustomField>