force-app/main/default/objects/CSheet__c/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <label>Background</label>
    <length>50</length>
    <type>Text</type>
</CustomField>