force-app/main/default/objects/CSheet__c/fields/Carry_Weight__c.field-meta.xml
<CustomField>
    <fullName>Carry_Weight__c</fullName>
    <label>Carry Weight</label>
    <summarizedField>Equipment__c.Weight__c</summarizedField>
    <summaryForeignKey>Equipment__c.Carry_Weight__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>