force-app/main/default/objects/CSheet__c/fields/Charisma__c.field-meta.xml
<CustomField>
    <fullName>Charisma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charisma</label>
    <referenceTo>Charisma__c</referenceTo>
    <relationshipLabel>CSheets</relationshipLabel>
    <relationshipName>CSheets</relationshipName>
    <type>Lookup</type>
</CustomField>