force-app/main/default/objects/CSheet__c/fields/Constitution__c.field-meta.xml
<CustomField>
    <fullName>Constitution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constitution</label>
    <referenceTo>Constitution__c</referenceTo>
    <relationshipLabel>CSheets</relationshipLabel>
    <relationshipName>CSheets</relationshipName>
    <type>Lookup</type>
</CustomField>