force-app/main/default/objects/CSheet__c/fields/Dexterity__c.field-meta.xml
<CustomField>
    <fullName>Dexterity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dexterity</label>
    <referenceTo>Dexterity__c</referenceTo>
    <relationshipLabel>CSheets</relationshipLabel>
    <relationshipName>CSheets</relationshipName>
    <type>Lookup</type>
</CustomField>