force-app/main/default/objects/CSheet__c/fields/Encumbered__c.field-meta.xml
<CustomField>
    <fullName>Encumbered__c</fullName>
    <formula>IF( Carry_Weight__c &gt; ( Strength__r.Stat__c * 5),  True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encumbered?</label>
    <type>Checkbox</type>
</CustomField>