force-app/main/default/objects/CSheet__c/fields/Equipment2__c.field-meta.xml
<CustomField>
    <fullName>Equipment2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>CSheets</relationshipLabel>
    <relationshipName>CSheets</relationshipName>
    <type>Lookup</type>
</CustomField>