force-app/main/default/objects/CSheet__c/fields/Features_Traits_Spells__c.field-meta.xml
<CustomField>
    <fullName>Features_Traits_Spells__c</fullName>
    <label>Features, Traits, Spells</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>