force-app/main/default/objects/CSheet__c/fields/Heavily_Encumbered__c.field-meta.xml
<CustomField>
    <fullName>Heavily_Encumbered__c</fullName>
    <formula>IF((Carry_Weight__c &gt;(Strength__r.Stat__c * 10)), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heavily Encumbered?</label>
    <type>Checkbox</type>
</CustomField>