force-app/main/default/objects/CSheet__c/fields/Hit_Points__c.field-meta.xml
<CustomField>
    <fullName>Hit_Points__c</fullName>
    <label>Hit Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>