force-app/main/default/objects/CSheet__c/fields/Inspiration__c.field-meta.xml
<CustomField>
    <fullName>Inspiration__c</fullName>
    <label>Inspiration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>