force-app/main/default/objects/CSheet__c/fields/Intelligence__c.field-meta.xml
<CustomField>
    <fullName>Intelligence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intelligence</label>
    <referenceTo>Intelligence__c</referenceTo>
    <relationshipLabel>CSheets</relationshipLabel>
    <relationshipName>CSheets</relationshipName>
    <type>Lookup</type>
</CustomField>