force-app/main/default/objects/CSheet__c/fields/Passive_Wisdom__c.field-meta.xml
<CustomField>
    <fullName>Passive_Wisdom__c</fullName>
    <label>Passive Wisdom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>