force-app/main/default/objects/CSheet__c/fields/Proficiency_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Bonus__c</fullName>
    <label>Proficiency Bonus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>