force-app/main/default/objects/CSheet__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <formula>Strength__r.Stat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>