force-app/main/default/objects/CSheet__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strength</label>
    <referenceTo>Strength__c</referenceTo>
    <relationshipLabel>CSheets</relationshipLabel>
    <relationshipName>CSheets</relationshipName>
    <type>Lookup</type>
</CustomField>