force-app/main/default/objects/CSheet__c/fields/Subrace__c.field-meta.xml
<CustomField>
    <fullName>Subrace__c</fullName>
    <label>Subrace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>