force-app/main/default/objects/CSheet__c/fields/Temporary_Hit_Points__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Hit_Points__c</fullName>
    <label>Temporary Hit Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>