force-app/main/default/objects/CSheet__c/fields/Treasures__c.field-meta.xml
<CustomField>
    <fullName>Treasures__c</fullName>
    <label>Treasures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>