force-app/main/default/objects/CSheet__c/fields/Weapon_Armor_Prof__c.field-meta.xml
<CustomField>
    <fullName>Weapon_Armor_Prof__c</fullName>
    <label>Proficiencies</label>
    <type>TextArea</type>
</CustomField>