force-app/main/default/objects/CSheet__c/fields/Weight_Carried__c.field-meta.xml
<CustomField>
    <fullName>Weight_Carried__c</fullName>
    <label>Weight Carried</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>