force-app/main/default/objects/CSheet__c/fields/Wisdom__c.field-meta.xml
<CustomField>
    <fullName>Wisdom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wisdom</label>
    <referenceTo>Wisdom__c</referenceTo>
    <relationshipLabel>CSheets</relationshipLabel>
    <relationshipName>CSheets</relationshipName>
    <type>Lookup</type>
</CustomField>